pokedex design complete

--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+
+    font-family: roboto;
 }
 
 .container {
     /* border: 1px solid green; */
     width: 100vw;
     min-height: 100vh;
-    padding-bottom: 20px;
+    padding: 20px 0 40px 0;
     background: #D46666;
 
     display: flex;
@@ -92,13 +94,34 @@ form {
 .info {
     /* border: 1px dashed green; */
     width: 300px;
-    height: 300px;
-    padding-left: 40px;
+    height: 400px;
 
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-around;
 }
+
+
+button {
+    border: none;
+    background: #D46666;
+    color: white;
+    font-size: 16px;
+
+    width: 200px;
+    height: 40px;
+    border-radius: 20px;
+}
+
+button:hover {
+    background: rgb(202, 89, 89);
+    cursor: pointer;
+
+}
+
+
+
 .section-2 {
     /* border: 1px solid black; */
     width: 400px;
